[package]
name = "kbd-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
stm32f3xx-hal = { version = "0.8", features = ["rt", "stm32f303", "stm32-usbd"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.6", features = ["device"] }
panic-halt = "0.2"
cortex-m-rtic = "0.5"
embedded-hal = "0.2"
usb-device = "0.2.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
